--- a/css/estilo.css
+++ b/css/estilo.css
@@ -30,7 +30,7 @@ ul{
 
 }
 
-a{
+ul a{
     padding: 10px;
     font-family: 'Roboto', sans-serif;
     text-decoration: none;
@@ -96,7 +96,7 @@ button{
     font-style: normal;
     text-decoration: none;
     text-size-adjust: 35px;
-  
+    
 
     color: #FFFFFF;
 }
@@ -108,13 +108,13 @@ button{
     font-weight: bold;
     text-decoration: none;
     text-size-adjust: 30px;
-
+    margin-top: 50px;
     color: #FFFFFF;
 }
 
 .texto_banner a{
     font-style: italic;
-    
+
     color: #FFFFFF
 }
 
@@ -128,7 +128,7 @@ button{
     height: 500px;
     left: 0px;
     top: 580px;
-    border: 1px solid red;
+    /*border: 1px solid red;*/
 
 }
 
@@ -186,3 +186,200 @@ button{
 
 }
 
+/**********************************************/
+/*******************Novidades*********************/
+
+.novidades{
+
+    position: absolute;
+    width: 1440px;
+    height: 500px;
+    left: 0px;
+    top: 1080px;
+    background-color: rgba(8, 35, 115, 0.7);
+
+}
+
+.novidades figure img{
+
+    position: absolute;
+    width: 450px;
+    height: 300px;
+    margin-left: 886px;
+    margin-top: 100px;
+
+}
+
+.texto_novidades{
+
+    position: absolute;
+    width: 600px;
+    height: 280px;
+    margin-left: 100px;
+    margin-top: 100px;
+    /*border: 1px solid red;*/
+}
+
+.texto_novidades H1{
+
+    position: absolute;
+    width: 544px;
+    height: 42px;
+    font-style: normal;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-decoration: none;
+    font-size-adjust: 35px;
+    text-align: left;
+    color: white;
+ 
+
+}
+
+.texto_novidades p{
+
+    position: absolute;
+    width: 583px;
+    height: 193px;
+    margin-top: 60px;
+    font-style: normal;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-decoration: none;
+    font-size-adjust: 24px;
+    text-align: justify;
+    color: white;
+
+}
+
+.texto_novidades a{
+
+    position: absolute;
+    width: 88px;
+    height: 21px;
+    margin-top: 250px;
+    color: white;
+    font-size-adjust: 30px;
+    font-style: italic;
+
+}
+
+/**********************************************/
+/*******************Footer*********************/
+
+.rodape{
+
+    position: absolute;
+    width: 1440px;
+    height: 400px;
+    /*border: 1px solid red;*/
+    margin-top: 1500px;
+}
+
+.logo_rodape figure img{
+
+    width: 165px;
+    height: auto;
+    margin-top: 150px;
+    margin-left: 50px;
+}
+
+.info_contato{
+
+    position: absolute;
+    width: 190px;
+    height: 220px;
+    top: 95px;
+    margin-left: 430px;
+    padding: 30px;
+    /*border: 1px solid red;*/
+
+}
+
+.topico{
+
+    font-family: 'roboto', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 20px ;
+    font-weight: bold;
+    font-style: italic;
+
+}
+
+.topico_email p{
+    font-size: 15px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding: 5px;
+}
+
+
+
+.topico_telefone p{
+    font-size: 15px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding: 5px;
+}
+
+
+
+.topico_endereco p{
+    font-size: 15px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding: 5px;
+}
+
+.redes_sociais figure{
+
+    position: absolute;
+    width: 500px;
+    height: 100px;
+    left: 850px;
+    top: 50px;
+    /*border: 1px solid brown;*/
+}
+
+.img1{
+
+    width: auto;
+    height: 90px;
+
+}
+
+.img2{
+
+    width: 90px;
+    height: 90px;
+    padding-left: 20px;
+
+}
+
+.img3{
+
+    width: 90px;
+    height: 90px;
+    padding-left: 20px;
+
+}
+
+.img4{
+
+    width: 90px;
+    height: 90px;
+    padding-left: 20px;
+
+}
+
+.menu_rodape{
+
+    /*border: 1px solid red;*/
+    position: absolute;
+    width: 120px;
+    height: 150px;
+    left: 850px;
+    top: 180px;
+}
+
+.menu_rodape li{
+
+    list-style: none;
+    line-height: 1.5;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+}
